[package]
name = "me-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
async-trait = "0.1.52"

[dependencies.serenity]
features = ["unstable_discord_api"]
version = "0.10"